[package]
name = "srs"
description = "WebM screen recorder."
repository = "https://github.com/quadrupleslap/srs"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
license = "MIT"
version = "0.2.0"

[dependencies]
cpal = "0.8"
libvpx-native-sys = "4"
opus = "0.2"
sample = "0.10"
webm = "1"

[features]
vp9 = []
