[package]
name = "record-screen"
version = "0.3.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
crossbeam-channel = "0.2"
docopt = "1"
env-libvpx-sys = "4.0.9"
quest = "0.2"
sample = "0.10"
scrap = "0.5"
serde = "1"
serde_derive = "1"
webm = "1"
vpx-encode = {path = "..", version="0.3"}

[features]
default = ["vp9"]

vp9 = ["vpx-encode/vp9"]
