[package]
name = "record-screen"
description = "Record a movie of your screen"
version = "0.3.0"
authors = ["Andrew Straw <strawman@astraw.com>", "Ram Kaniyur <quadrupleslap@gmail.com>"]
repository = "https://github.com/astraw/vpx-encode"
license = "MIT"
edition = "2018"

[dependencies]
docopt = "1"
env-libvpx-sys = "5"
quest = "0.3"
scrap = "0.5"
serde = {version="1", features=["derive"]}
webm = "1"
vpx-encode = {path = "..", version="0.4", features=["vp9"]}
