[package]
name = "srs-bin"
version = "0.2.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]

[[bin]]
name = "srs"
path = "src/main.rs"

[dependencies]
cpal = "0.8"
crossbeam-channel = "0.2"
docopt = "1"
libvpx-native-sys = "4"
opus = "0.2"
quest = "0.2"
sample = "0.10"
scrap = "0.5"
serde = "1"
serde_derive = "1"
webm = "1"
srs = {path = "..", version="0.2"}
